--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,29 @@
         android:theme="@style/Theme.DUAN1_APPBANDOAN"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ViewActivity.RegisterActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ViewActivity.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewActivity.HoaDonActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewActivity.CaNhanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewActivity.CategoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
