--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.DUAN1_APPBANDOAN"
         tools:targetApi="31">
         <activity
+            android:name=".ViewActivity.QuanLySP"
+            android:exported="false" />
+        <activity
+            android:name=".ViewActivity.ThongKeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewActivity.QuanLyDHAcitivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminActivity"
+            android:exported="false" />
+        <activity
             android:name=".ViewActivity.ProductDetailActivity"
             android:exported="false" />
         <activity
