--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 04 14:22:05 ICT 2024
-sdk.dir=C\:\\Users\\Jace.DESKTOP-MBQ27Q0\\AppData\\Local\\Android\\Sdk
+#Wed Dec 04 23:16:35 ICT 2024
+sdk.dir=C\:\\Users\\Asus\\AppData\\Local\\Android\\Sdk
